k8s/flask-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: flask-app.example.xyz  # Replace me
    http:
      paths:
      - path: /api/message
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 80
      - path: /custom-metrics
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 80
